# deltaFlow

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  _admittance_8_c.html  _admittance_8_c.js  _admittance_8_c__incl.dot  _admittance_8_c_a4ecd8a8507aa5a6ba627d6d7d5e77f0d_icgraph.dot  _admittance_8_c_source.html  _admittance_8_h.html  _admittance_8_h.js  _admittance_8_h__dep__incl.dot  _admittance_8_h__incl.dot  _admittance_8_h_source.html  _argparse_8_c.html  _argparse_8_c__incl.dot  _argparse_8_c_source.html  _argparse_8_h.html  _argparse_8_h.js  _argparse_8_h__dep__incl.dot  _argparse_8_h__incl.dot  _argparse_8_h_source.html  _define_8_h.html  _define_8_h.js  _define_8_h__dep__incl.dot  _define_8_h_source.html  _gauss_seidel_8_c.html  _gauss_seidel_8_c.js  _gauss_seidel_8_c__incl.dot  _gauss_seidel_8_c_source.html  _gauss_seidel_8_h.html  _gauss_seidel_8_h.js  _gauss_seidel_8_h__dep__incl.dot  _gauss_seidel_8_h__incl.dot  _gauss_seidel_8_h_source.html  _logger_8_c.html  _logger_8_c__incl.dot  _logger_8_c_source.html  _logger_8_h.html  (+116 more)
.github/workflows/: build.yml  docs.yml
Old/: CMakeLists.txt  main.C
Old/algorithms/: algorithms.C  gauss.F
Old/io/: baseReader.H  cdfReader.H  config.C  csvReader.C  logger.H
Old/utilities/: cmd.C  cmd.H  define.H  exception.C  exception.H  matrix.C  utils.C  utils.H
Src/: CreateAdmittanceMatrix.m  GaussSeidel.m  InitLogger.m  NewtonRaphson.m  RelaxationCoefficient.m  WritePowerFlowCsv.m  deltaFlow.m  main.m
cmake/: RegisterGlobalSourcesAndIncludes.cmake  SystemInfo.cmake
data/: bus-data.csv  bus.csv  line-data.csv  line.csv
data/IEEE/: ieee300.txt
doc/: sim.txt
docs/: style.css
src/: CMakeLists.txt  main.C  version.h.in
src/algorithms/: CMakeLists.txt  algorithms.C  algorithms.H  gauss.F  newton.f
src/core/: Admittance.C  CMakeLists.txt  GaussSeidel.C  GaussSeidel.H  NewtonRaphson.C  NewtonRaphson.H  Reader.C  Reader.H  Writer.C  Writer.H
src/core/model/: Admittance.C  Admittance.H  Data.H
src/core/solvers/: GaussSeidel.C  GaussSeidel.H  Jacobian.C  Jacobian.H  NewtonRaphson.C  NewtonRaphson.H  PowerMismatch.C  PowerMismatch.H  Qlim.C  Qlim.H
src/io/: CMakeLists.txt  IEEE.C  IEEE.H  OutputFile.H  PSSE.C  PSSE.H  Reader.C  Reader.H  Writer.C  Writer.H  baseReader.C  branchDataReader.C  branchDataReader.H  busDataReader.C  busDataReader.H  config.H  csvReader.C  csvReader.H  logger.C
src/logger/: Logger.C  Logger.H
src/logging/: Logger.C  Logger.H
src/utilities/: Argparse.C  Argparse.H  CMakeLists.txt  Define.H  Utils.C  Utils.H  argparse.C  argparse.H  cmd.C  cmd.H  define.H  enums.H  exception.C  exception.H  matrix.C  matrix.H  types.H  utils.H
src/utils/: Argparse.C  Argparse.H  Banner.H  Define.H  Display.H  Progress.H  ProgressBar.H  Utils.H
test/: CMakeLists.txt  TestAdmittance.C  TestDivergence.C  TestGaussSeidel.C  TestIEEECDF118.C  TestIEEECDF14.C  TestIEEECDF30.C  TestIEEECDF300.C  TestIEEECDF57.C  TestNewtonRaphson.C  TestPSSEIEEE14V32.C  TestPSSEIEEE39V33.C  TestUtils.H
test/data/IEEE/: cdf.txt
